Renamed a few files and fixed a bug that caused my buttons on the login page to be shifted

--- a/project/public/css/login.css
+++ b/project/public/css/login.css
@@ -1,31 +1,7 @@
-a {
-    color: #00B7FF;
-}
-
-.dropdown:hover .dropdown-menu {
-    display: block;
-}
-
-.navbar-nav {
-    float: none;
-    background-color: black;
-    color: white;
-}
-
-.navbar-nav li .dropdown-toggle {
-    width: 10em;
-    margin-right: auto;
-    margin-left: auto;
-    background-color: #000;
-    border: 2px #FFF solid;
-    border-radius: 10px;
-    margin-top: 1em;
-}
-
 body {
     background-color: #141452;
-}
 
+}
 .inner-center-div {
     background-color: #33CCFF;
     height: 270px;
